# hera-recorder

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  PHASE1_GUIDE.md  README.md  build_all.sh  build_amd64.sh  build_arm.sh  doxygen.config  install_artifacts.sh  jenkins_deploy.sh  phase1_record.sh  phase1_validate.sh  sync_Tags.sh  tmp_cmake_root_cmake
common/: CMakeLists.txt  hera_errno.h  tron_errno.h
common/data_def/: data_dummy.hpp  data_imu.hpp  data_lidar.hpp  device_data.hpp  device_types.hpp
common/data_message/: all_data.hpp  data_camera.hpp  data_dummy.hpp  data_imu.hpp  data_lidar.hpp  sensor_and_data_types.hpp  sensor_data.hpp
common/include/: hera_errno.h  version.hpp
common/include/ipc/: ipc_queue.hpp
common/include/logger/: log_impl.hpp  log_level.hpp  log_string.hpp  logger.hpp
common/include/utils/: endian.hpp  folder_content.hpp  process.hpp  thread_queue.hpp  time.hpp
common/ipc/: ipc_queue.cpp  ipc_queue.hpp
common/logger/: logger.cpp  logger.hpp
common/logger/impl/: log_impl.cpp  log_impl.hpp  log_impl_signal.cpp  log_string.hpp
common/rpc/: hera.thrift  make.sh  sensor_collector.proto  tron.thrift
common/src/: version.cpp
common/src/ipc/: ipc_queue.cpp
common/src/logger/: log_impl.cpp  log_impl_signal.cpp
common/src/utils/: folder_content.cpp  process.cpp  remapper.cpp  time.cpp
common/utils/: folder_content.cpp  folder_content.hpp  get_folder_content.cpp  get_folder_content.hpp  remapper.cpp  remapper.hpp  system_timestamp.cpp  system_timestamp.hpp  thread_queue.hpp  threadsafe_queue.hpp  time.cpp  time.hpp  timestamp.cpp  timestamp.hpp
convert/: CMakeLists.txt  USAGE.md
convert/config/: remap-tron4.json
convert/include/: converter.hpp  ros_message.hpp  ros_message_impl.hpp  ros_message_types.hpp
convert/include/direct_bag/: aligned_allocator.h
convert/src/: aligned_converter.cpp  aligned_converter.hpp  all_converters.hpp  converter.cpp  converter.hpp  converter_manager.cpp  converter_manager.hpp  main.cpp  processer.hpp  processer_core.cpp  ros_message.cpp  ros_message.hpp  ros_message_impl.hpp  test.cpp
convert/src/converters/: converter.cpp  converter.hpp
convert/src/defs/: defs.hpp
convert/src/direct_bag/: direct_bag.cpp  direct_bag.h  direct_bag_dependencies.h  direct_bag_impl.h  direct_bag_impl_dependencies.h
convert/src/processer_impls/: camera.cpp  gnss.cpp  imu.cpp  lidar.cpp
convert/src/ros_message_impl/: camera.cpp  dummy.cpp  gnss.cpp  imu.cpp  ins.cpp  lidar.cpp  (+1 more)
daemon/: CMakeLists.txt
daemon/broadcast/: broadcaster.cpp  broadcaster.hpp  listener.cpp  listener.hpp  message.cpp  message.hpp
daemon/config/: daemon.conf  daemon.json  daemon_debug.conf  daemon_debug.json  daemon_macdebug.json  profiles.json  upload_server.json
daemon/finder/: finder.cpp
daemon/include/: broadcast.hpp  broadcast_packet.hpp  config.hpp  frequecy_calculator.hpp  serialize.hpp  service.hpp
daemon/network/: network.cpp  network.hpp
daemon/rpc/: hera.thrift
daemon/script/: hera-daemon  hera-daemon.service  hera-upload-server.service  install-extra.sh  udiskie.service
daemon/src/: acquisition_manager.cpp  acquisition_manager.hpp  acquisition_manager_control.cpp  acquistion_manager_get.cpp  acquistion_manager_profile.cpp  broadcast.cpp  config.cpp  daemon.cpp  frequecy_calculator.cpp  service.cpp  service.hpp  service_control.cpp  service_data.cpp  service_get.cpp  service_profile.cpp  service_storage.cpp  service_upload.cpp  tron_service_handler.cpp  tron_service_handler.hpp
daemon/test/: dummy_test.cpp
daemon/upload_server/: upload_server.cpp
device/: CMakeLists.txt  NEWDEVICE.md  include.hpp
device/base/: device.cpp  device_data.cpp  device_types_impl.hpp  factory.cpp  sensor_data.cpp  version.cpp
device/cmake/: flir.cmake  s32vsal.cmake
device/display/: base.cpp  camera_data.cpp  dummy_data.cpp  gnss_data.cpp  imu_data.cpp  ins_data.cpp  lidar_data.cpp  odometry_data.cpp
device/generator/: generator.hpp  main.cpp  output.cpp  parser.cpp
device/include/: device.hpp  device_data.hpp  device_factory.hpp  device_types.hpp  display_data.hpp  factory.hpp  include.hpp  parameter.hpp  sensor_data.hpp  sensor_data_types.hpp  types.hpp  version.hpp
device/plugin/: plugin_common.hpp  plugin_impl.hpp
device/src/: config_insta_phase1.json  config_insta_webcam_phase1.json  config_mid360_livox.json  config_phase1_combined.json  device.cpp  device.hpp  device_data.cpp  device_data.hpp  device_factory.cpp  device_factory.hpp  device_types.hpp  dummy_test.cpp  record.cpp
device/unit_test/: config.json  dummy_test.cpp  record_test.cpp  s32vgeely_test.cpp  s32vmipi_test.cpp
devices/: CMakeLists.txt  NEWDEVICE.md  all_devices.hpp
devices/src/: device.cpp  device.hpp  device_data.cpp  device_data.hpp  device_factory.hpp  device_types.hpp  storage.cpp  storage.hpp
devices/unit_test/: dummy_test.cpp
replay/: CMakeLists.txt
replay/include/: replayer.hpp
replay/src/: aligned_replayer.cpp  aligned_replayer.hpp  main.cpp  processer.cpp  processer.hpp  replayer.cpp  replayer.hpp
sensor_collector/: CMakeLists.txt
sensor_collector/src/: sensor_list_factory.cpp  sensor_list_factory.hpp
sensor_collector/test/: sensor_lidar_test.cpp  sensor_list_factory_test.cpp  sensor_test.cpp
slam/: CMakeLists.txt  USAGE.md  launch_realtime_slam_2d.sh  setup.bash
slam/bridge/: CMakeLists.txt
slam/caller/: CMakeLists.txt
slam/carto/: CMakeLists.txt
slam/result/: CMakeLists.txt
slam/src/: CMakeLists.txt  package.xml  read_test.cpp
standalone/feedback/: CMakeLists.txt
standalone/pano/: 2021-0127内参  2021-0127内参.txt  CMakeLists.txt
standalone/wrapper/: CMakeLists.txt
storage/: CMakeLists.txt
storage/include/: storage.hpp  storage_data_header.hpp  upload.hpp  version.hpp
storage/src/: device_data.cpp  storage.cpp  storage.hpp  storage_data_header.cpp  storage_read.cpp  upload.cpp  version.cpp
storage/tool/: extract_insta.cpp  extract_mid360.cpp  ingest_insta_video.cpp  ingest_stream_hera.cpp  main.cpp  tool.cpp  tool.hpp  validate_stitch_mediasdk.cpp
(+581 files in other folders)
